# Set the project name
project(libnl)

# Add a library with the above sources
add_library(${PROJECT_NAME}
		lib/addr.c
		lib/attr.c
		lib/cache.c
		lib/cache_mngr.c
		lib/cache_mngt.c
		lib/data.c
		lib/error.c
		lib/handlers.c
		lib/hash.c
		lib/hashtable.c
		lib/mpls.c
		lib/msg.c
		lib/nl.c
		lib/object.c
		lib/socket.c
		lib/utils.c
		lib/version.c
		lib/genl/ctrl.c
		lib/genl/family.c
		lib/genl/genl.c
		lib/genl/mngt.c
		lib/idiag/idiag.c
		lib/idiag/idiag_meminfo_obj.c
		lib/idiag/idiag_msg_obj.c
		lib/idiag/idiag_req_obj.c
		lib/idiag/idiag_vegasinfo_obj.c
		lib/netfilter/ct.c
		lib/netfilter/ct_obj.c
		lib/netfilter/exp.c
		lib/netfilter/exp_obj.c
		lib/netfilter/log.c
		lib/netfilter/log_msg.c
		lib/netfilter/log_msg_obj.c
		lib/netfilter/log_obj.c
		lib/netfilter/netfilter.c
		lib/netfilter/nfnl.c
		lib/netfilter/queue.c
		lib/netfilter/queue_msg.c
		lib/netfilter/queue_msg_obj.c
		lib/netfilter/queue_obj.c
		lib/route/act.c
		lib/route/addr.c
		lib/route/class.c
		lib/route/classid.c
		lib/route/cls.c
		lib/route/link.c
		lib/route/neigh.c
		lib/route/neightbl.c
		lib/route/netconf.c
		lib/route/nexthop.c
		lib/route/nexthop_encap.c
		lib/route/nh_encap_mpls.c
		lib/route/pktloc.c
		lib/route/qdisc.c
		lib/route/route.c
		lib/route/route_obj.c
		lib/route/route_utils.c
		lib/route/rtnl.c
		lib/route/rule.c
		lib/route/tc.c
		lib/route/act/gact.c
		lib/route/act/mirred.c
		lib/route/act/skbedit.c
		lib/route/act/vlan.c
		lib/route/cls/basic.c
		lib/route/cls/cgroup.c
		lib/route/cls/ematch.c
		lib/route/cls/fw.c
		lib/route/cls/mall.c
		lib/route/cls/police.c
		lib/route/cls/u32.c
		lib/route/cls/ematch/cmp.c
		lib/route/cls/ematch/container.c
		lib/route/cls/ematch/meta.c
		lib/route/cls/ematch/nbyte.c
		lib/route/cls/ematch/text.c
		lib/route/link/api.c
		lib/route/link/bonding.c
		lib/route/link/bridge.c
		lib/route/link/can.c
		lib/route/link/dummy.c
		lib/route/link/geneve.c
		lib/route/link/ifb.c
		lib/route/link/inet.c
		lib/route/link/inet6.c
		lib/route/link/ip6tnl.c
		lib/route/link/ipgre.c
		lib/route/link/ipip.c
		lib/route/link/ipvlan.c
		lib/route/link/ipvti.c
		lib/route/link/macsec.c
		lib/route/link/macvlan.c
		lib/route/link/ppp.c
		lib/route/link/sit.c
		lib/route/link/sriov.c
		lib/route/link/veth.c
		lib/route/link/vlan.c
		lib/route/link/vrf.c
		lib/route/link/vxlan.c
		lib/route/link/xfrmi.c
		lib/route/qdisc/blackhole.c
		lib/route/qdisc/cbq.c
		lib/route/qdisc/dsmark.c
		lib/route/qdisc/fifo.c
		lib/route/qdisc/fq_codel.c
		lib/route/qdisc/hfsc.c
		lib/route/qdisc/htb.c
		lib/route/qdisc/ingress.c
		lib/route/qdisc/mqprio.c
		lib/route/qdisc/netem.c
		lib/route/qdisc/plug.c
		lib/route/qdisc/prio.c
		lib/route/qdisc/red.c
		lib/route/qdisc/sfq.c
		lib/route/qdisc/tbf.c
)

target_include_directories(${PROJECT_NAME}
    PUBLIC ${PROJECT_SOURCE_DIR}/include
)
